# rep

polynomials/: CMakeLists.txt
polynomials/polynomialsLib/: CMakeLists.txt  TList.cpp  TList.h  monom.h  polynomial.h
polynomials/sample/: CMakeLists.txt  main.cpp
polynomials/test/: CMakeLists.txt  test.cpp
